<resources>
    <string name="Unspecified_display_name">Display name not specified</string>
    <string name="NameFragment_display_name">Plot ID</string>
    <string name="LandUseCoverFragment_display_name">Land Cover/Use</string>
    <string name="SlopeFragment_display_name">Slope</string>
    <string name="SlopeShapeFragment_display_name">Slope Shape</string>
    <string name="SoilHorizonsFragment_display_name">Soil Layers</string>
    <string name="SpecialSoilConditionsFragment_display_name">Soil Conditions</string>
    <string name="PhotosFragment_display_name">Photos</string>
    <string name="ReviewFragment_display_name">Review</string>
    <string name="ResultsFragment_display_name">Results</string>
    <string name="InfoFragment_display_name">Info</string>
    <string name="ChangelogFragment_display_name">Changelog</string>
    <string name="LicenseFragment_display_name">License</string>
    <string name="LegalNoticesFragment_display_name">Legal Notices</string>
    <string name="app_name">Land Info</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="or">or</string>
    <string name="new_plot">New Plot</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_copy_to_sd">Copy to SD card</string>
    <string name="action_about">About</string>
    <string name="pref_sync_google_account">Account</string>
    <string name="pref_sync_google_account_default">not selected</string>
    <string name="pref_sync_wifi_only">Wifi only</string>
    <string name="pref_sync_wifi_only_summ">Sync with server only when on wifi</string>
    <string name="pref_account_change_warning">Changing accounts will permanently delete any plot data that has not been uploaded to the server. Are you sure you want to proceed?</string>
    <string name="pref_ui_theme">Color scheme</string>
    <string name="pref_ui_theme_light_switch_text">Light</string>
    <string name="pref_ui_theme_dark_switch_text">Dark</string>
    <string name="pref_ui_theme_light_summary">Light</string>
    <string name="pref_ui_theme_dark_summary">Dark</string>
    <string name="pref_ui_theme_summ">Use light theme</string>
    <string name="title_activity_edit_list">Detail List</string>
    <string name="title_activity_edit_detail">Detail</string>
    <string name="title_activity_photos">Photos</string>
    <string name="title_activity_soil_horizon">Soil Horizon</string>
    <string name="title_activity_soil_texture">Soil Texture</string>
    <string name="title_activity_about">About</string>
    <string name="plot_edit_detail_activity_title">Details</string>
    <string name="plot_edit_list_activity_delete_confirm">Are you sure you want to delete this plot?  This cannot be undone.</string>
    <string name="plot_list_activity_using_account_message">using account: </string>
    <string name="plot_list_activity_device_not_supported_message">This device is not supported.</string>
    <string name="plot_list_activity_google_play_services_needed_message">Google Play Services must be installed.</string>
    <string name="plot_list_activity_fetching_plots">Fetching any existing plots from server...</string>
    <string name="plot_list_activity_fetching_plots_error">Unable to fetch plots from server at this time.  To try again later, go to Settings screen and reselect account.</string>
    <string name="plot_list_activity_backing_up_db">Copying database to removable SD card...</string>
    <string name="plot_list_activity_backing_up_db_success">Database successfully copied to SD card.</string>
    <string name="plot_list_activity_backing_up_db_error">Unable to copy database.  Verify that SD card is present and writable.</string>
    <string name="about_activity_coordinated">coordinated by:\n  The Jornada,\n  New Mexico State University</string>
    <string name="about_activity_funded">funded by:\n  USAID</string>
    <string name="about_activity_developed">developed by:\n  Noisy Flowers LLC</string>
    <string name="plot_map_fragment_plot_not_analyzed">Plot has not been analyzed.</string>
    <string name="slope_fragment_slope_1">flat (0-2%)</string>
    <string name="slope_fragment_slope_2">gentle (3-5%)</string>
    <string name="slope_fragment_slope_3">moderate (6-10%)</string>
    <string name="slope_fragment_slope_4">rolling (11-15%)</string>
    <string name="slope_fragment_slope_5">hilly (16-30%)</string>
    <string name="slope_fragment_slope_6">steep (31-60%)</string>
    <string name="slope_fragment_slope_7">very steep (&gt;60%)</string>
    <string name="fragment_slope_clinometer_button">Use slope meter</string>
    <string name="slope_fragment_override_confirm">Are you sure you want to override the slope meter value?</string>
    <string name="slope_shape_fragment_slope_shape_1">concave, concave</string>
    <string name="slope_shape_fragment_slope_shape_2">concave, convex</string>
    <string name="slope_shape_fragment_slope_shape_3">concave, linear</string>
    <string name="slope_shape_fragment_slope_shape_4">convex, concave</string>
    <string name="slope_shape_fragment_slope_shape_5">convex, convex</string>
    <string name="slope_shape_fragment_slope_shape_6">convex, linear</string>
    <string name="slope_shape_fragment_slope_shape_7">linear, concave</string>
    <string name="slope_shape_fragment_slope_shape_8">linear, convex</string>
    <string name="slope_shape_fragment_slope_shape_9">linear, linear</string>
    <string name="slope_shape_fragment_concave">concave</string>
    <string name="slope_shape_fragment_convex">convex</string>
    <string name="slope_shape_fragment_linear">linear</string>
    <string name="soil_texture_activity_title">Soil Texture</string>
    <string name="soil_texture_activity_ball_demo">Soil Texture</string>
    <string name="soil_texture_activity_ribbon_demo">Soil Texture</string>
    <string name="soil_texture_activity_ribbon_length_demo">Soil Texture</string>
    <string name="soil_texture_activity_feel_demo">Soil Texture</string>
    <string name="soil_texture_activity_ball_label">Does the soil form a ball?</string>
    <string name="soil_texture_activity_ribbon_label">Does the soil form a ribbon?</string>
    <string name="soil_texture_activity_ribbon_length_label">Length of ribbon</string>
    <string name="soil_texture_activity_feel_label">Soil feel</string>
    <string name="soil_texture_activity_soil_texture_label">Soil texture</string>
    <string name="soil_texture_activity_use_this">Use this texture</string>
    <string name="soil_texture_activity_ball_help_content_description">Help for soil ball</string>
    <string name="soil_texture_activity_ribbon_help_content_description">Help for soil ribbon</string>
    <string name="soil_texture_activity_ribbon_length_help_content_description">Help for soil ribbon length</string>
    <string name="soil_texture_activity_feel_help_content_description">Help for soil feel</string>
    <string name="soil_texture_activity_soil_texture_sand">Sand</string>
    <string name="soil_texture_activity_soil_texture_loamy_sand">Loamy sand</string>
    <string name="soil_texture_activity_soil_texture_sandy_loam">Sandy loam</string>
    <string name="soil_texture_activity_soil_texture_silt_loam">Silt loam</string>
    <string name="soil_texture_activity_soil_texture_loam">Loam</string>
    <string name="soil_texture_activity_soil_texture_sandy_clay_loam">Sandy clay loam</string>
    <string name="soil_texture_activity_soil_texture_silty_clay_loam">Silty clay loam</string>
    <string name="soil_texture_activity_soil_texture_clay_loam">Clay loam</string>
    <string name="soil_texture_activity_soil_texture_sandy_clay">Sandy clay</string>
    <string name="soil_texture_activity_soil_texture_silty_clay">Silty clay</string>
    <string name="soil_texture_activity_soil_texture_clay">Clay</string>
    <string name="soil_texture_activity_ribbon_length_1">&lt; 2.5cm</string>
    <string name="soil_texture_activity_ribbon_length_2">2.5 - 5cm</string>
    <string name="soil_texture_activity_ribbon_length_3">&gt; 5cm</string>
    <string name="soil_texture_activity_gritty">Gritty</string>
    <string name="soil_texture_activity_smooth">Smooth</string>
    <string name="soil_texture_activity_neither">Not gritty or smooth</string>
    <string name="name_fragment_plot_name">Plot Name</string>
    <string name="name_fragment_recorder_name">Recorder Name</string>
    <string name="name_fragment_organization">Organization</string>
    <string name="name_fragment_location">Location\n(decimal degrees)</string>
    <string name="name_fragment_start_gps">Obtain GPS fix</string>
    <string name="name_fragment_stop_gps">Cancel GPS fix</string>
    <string name="name_fragment_latitude">Latitude</string>
    <string name="name_fragment_longitude">Longitude</string>
    <string name="name_fragment_gps_wait">obtaining...</string>
    <string name="name_fragment_plot_already_exists">A plot with that name already exists.</string>
    <string name="name_fragment_test_plot_answer_rqd">Answer to test plot is required.</string>
    <string name="name_fragment_abort_new_plot">Abort creating new plot? (Hint: To save, use Action Bar Up button, above, rather than Back button.)</string>
    <string name="soil_horizon_fragment_choose_texture">&lt;choose texture&gt;</string>
    <string name="soil_horizon_fragment_choose_fragment">&lt;choose range&gt;</string>
    <string name="soil_horizon_fragment_cannot_find_color_app">Cannot find soil color app.</string>
    <string name="soil_horizon_fragment_rock_fragment_label">Rock fragment volume</string>
    <string name="soil_horizon_fragment_color_label">Dry soil color</string>
    <string name="soil_horizon_fragment_texture_label">Soil texture</string>
    <string name="soil_horizon_fragment_red">red:</string>
    <string name="soil_horizon_fragment_green">green:</string>
    <string name="soil_horizon_fragment_blue">blue:</string>
    <string name="soil_horizon_fragment_munsell">Munsell:</string>
    <string name="soil_horizon_fragment_color_button">Measure soil color</string>
    <string name="soil_horizon_fragment_texture_button">Guide me</string>
    <string name="soil_horizon_fragment_rock_volume_1">0-15%</string>
    <string name="soil_horizon_fragment_rock_volume_2">15-35%</string>
   	<string name="soil_horizon_fragment_rock_volume_3">35-60%</string>
    <string name="soil_horizon_fragment_rock_volume_4">60-90%</string>
    <string name="soil_horizon_fragment_rock_volume_5">Restrictive layer</string>
    <string name="special_soil_conditions_fragment_surface_cracked">vertical cracks in soil profile</string>
    <string name="special_soil_conditions_fragment_surface_not_cracked">no vertical cracks in soil profile</string>
    <string name="special_soil_conditions_fragment_surface_salt">salt on soil surface</string>
    <string name="special_soil_conditions_fragment_no_surface_salt">no salt on soil surface</string>
    <string name="land_use_cover_fragment_flooded">flooded</string>
    <string name="land_use_cover_fragment_not_flooded">not flooded</string>
    <string name="land_use_cover_fragment_grazed">grazed</string>
    <string name="land_use_cover_fragment_not_grazed">not grazed</string>
    <string name="land_use_cover_fragment_land_cover_1">tree cover, &gt;25% canopy</string>
    <string name="land_use_cover_fragment_land_cover_2">shrub cover, &gt;50% cover</string>
    <string name="land_use_cover_fragment_land_cover_3">grassland, &gt;50% grass</string>
    <string name="land_use_cover_fragment_land_cover_4">savanna, 10-20% tree cover</string>
    <string name="action_create_plot">Create New Plot</string>
    <string name="action_show_list">Show Plot List</string>
    <string name="action_show_map">Show Plot Map</string>
</resources>