<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <!--
    <ListPreference
        android:key="pref_google_account"
        android:title="@string/pref_sync_google_account"
        android:dialogTitle="@string/pref_sync_google_account"
        android:defaultValue="@string/pref_sync_google_account_default" />
    -->
    <Preference
        android:key="pref_google_account"
        android:title="@string/pref_sync_google_account"
        android:dialogTitle="@string/pref_sync_google_account"
        android:defaultValue="@string/pref_sync_google_account_default" />
    
    <CheckBoxPreference
        android:key="pref_sync_wifi_only"
        android:title="@string/pref_sync_wifi_only"
        android:summary="@string/pref_sync_wifi_only_summ"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_ui_theme"
        android:title="@string/pref_ui_theme"
        android:summary="@string/pref_ui_theme_summ"
        android:defaultValue="true" />
    
</PreferenceScreen>
