<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:myapp="http://schemas.android.com/apk/res-auto">
    
    <!--
    <item android:id="@+id/action_show_list"
          android:icon="@drawable/ic_action_view_as_list"
          android:title="@string/action_show_list" 
          myapp:showAsAction="always"/>
    <item android:id="@+id/action_show_map"
          android:icon="@drawable/ic_action_map"
          android:title="@string/action_show_map" 
          myapp:showAsAction="always"/>
    <item android:id="@+id/action_create_plot"
          android:icon="@drawable/ic_action_new"
          android:title="@string/action_create_plot" 
          myapp:showAsAction="always"/>
    -->
	
    <item android:id="@+id/action_show_list"
          android:icon="?attr/customListIcon"
          android:title="@string/action_show_list" 
          myapp:showAsAction="always"/>
    <item android:id="@+id/action_show_map"
          android:icon="?attr/customMapIcon"
          android:title="@string/action_show_map" 
          myapp:showAsAction="always"/>
    <item android:id="@+id/action_create_plot"
          android:icon="?attr/customAddIcon"
          android:title="@string/action_create_plot" 
          myapp:showAsAction="always"/>
    
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />
    <item android:id="@+id/action_copy_to_sd"
          android:title="@string/action_copy_to_sd"
          android:showAsAction="never" />
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:showAsAction="never" />
    <!-- hidden in About instead
    <item android:id="@+id/action_take_bug_report"
          android:title="Send bug report"
          android:showAsAction="never" />
    -->
</menu>
