<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
>
    
	<ScrollView 
	    android:id="@+id/activity_soiltexture_decision_scroll"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_above="@+id/activity_soiltexture_texture_label"
	>
	
		<LinearLayout
		   	android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		>
	
			<RelativeLayout
			    android:id="@+id/activity_soiltexture_ball_layout"
			   	android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			>
			    <TextView
			        android:id="@+id/activity_soiltexture_ball_label"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dp"
			        android:text="@string/soil_texture_activity_ball_label"
			    />
			    <ImageView
			        android:id="@+id/activity_soiltexture_ball_help"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:onClick="onHelpClick"
			        android:layout_toRightOf="@+id/activity_soiltexture_ball_label"
			        android:src="@drawable/ic_menu_help"
			        android:contentDescription="@string/soil_texture_activity_ball_help_content_description"
			    />		        
				
				<RadioGroup
				    android:id="@+id/activity_soiltexture_radiogroup_ball"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
			        android:layout_below="@+id/activity_soiltexture_ball_label"
				>
				    <RadioButton
				        android:id="@+id/activity_soiltexture_radiobutton_ball_yes"
				    	android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				    	android:text="@string/yes"
				    	android:onClick="onBallRadioButtonClicked"
				    />
				    <RadioButton
				        android:id="@+id/activity_soiltexture_radiobutton_ball_no"
				    	android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				    	android:text="@string/no"
				    	android:onClick="onBallRadioButtonClicked"
				    />
				</RadioGroup>
			</RelativeLayout>		 
			   	
			<RelativeLayout
			    android:id="@+id/activity_soiltexture_ribbon_layout"
			   	android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			>
				<TextView
			        android:id="@+id/activity_soiltexture_ribbon_label"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dp"
			        android:text="@string/soil_texture_activity_ribbon_label"
			    />
			    <ImageView
			        android:id="@+id/activity_soiltexture_ribbon_help"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:onClick="onHelpClick"
			        android:layout_toRightOf="@+id/activity_soiltexture_ribbon_label"
			        android:src="@drawable/ic_menu_help"
			        android:contentDescription="@string/soil_texture_activity_ribbon_help_content_description"
			    />		        
				<RadioGroup
				    android:id="@+id/activity_soiltexture_radiogroup_ribbon"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
			        android:layout_below="@+id/activity_soiltexture_ribbon_label"
				>
				    <RadioButton
				        android:id="@+id/activity_soiltexture_radiobutton_ribbon_yes"
				    	android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				    	android:text="@string/yes"
				    	android:onClick="onRibbonRadioButtonClicked"
				    />
				    <RadioButton
				        android:id="@+id/activity_soiltexture_radiobutton_ribbon_no"
				    	android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				    	android:text="@string/no"
				    	android:onClick="onRibbonRadioButtonClicked"
				    />
				</RadioGroup>
			</RelativeLayout>
	
			<RelativeLayout
			    android:id="@+id/activity_soiltexture_ribbonlength_layout"
			   	android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			>
				<TextView
			        android:id="@+id/activity_soiltexture_ribbonlength_label"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dp"
			        android:text="@string/soil_texture_activity_ribbon_length_label"
			    />
			    <ImageView
			        android:id="@+id/activity_soiltexture_ribbonlength_help"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:onClick="onHelpClick"
			        android:layout_toRightOf="@+id/activity_soiltexture_ribbonlength_label"
			        android:src="@drawable/ic_menu_help"
			        android:contentDescription="@string/soil_texture_activity_ribbon_length_help_content_description"
			    />		        
				<RadioGroup
				    android:id="@+id/activity_soiltexture_radiogroup_ribbonlength"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
			        android:layout_below="@+id/activity_soiltexture_ribbonlength_label"
				>
				    <RadioButton
				        android:id="@+id/activity_soiltexture_radiobutton_ribbonlength_1"
				    	android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				    	android:text="@string/soil_texture_activity_ribbon_length_1"
				    	android:onClick="onRibbonLengthRadioButtonClicked"
				    />
				    <RadioButton
				        android:id="@+id/activity_soiltexture_radiobutton_ribbonlength_2"
				    	android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				    	android:text="@string/soil_texture_activity_ribbon_length_2"
				    	android:onClick="onRibbonLengthRadioButtonClicked"
				    />
				    <RadioButton
				        android:id="@+id/activity_soiltexture_radiobutton_ribbonlength_3"
				    	android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				    	android:text="@string/soil_texture_activity_ribbon_length_3"
				    	android:onClick="onRibbonLengthRadioButtonClicked"
				    />
				</RadioGroup>
			</RelativeLayout>
														
			<RelativeLayout
			    android:id="@+id/activity_soiltexture_feel_layout"
			   	android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			>
				<TextView
			        android:id="@+id/activity_soiltexture_feel_label"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dp"
			        android:text="@string/soil_texture_activity_feel_label"
			    />
			    <ImageView
			        android:id="@+id/activity_soiltexture_feel_help"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:onClick="onHelpClick"
			        android:layout_toRightOf="@+id/activity_soiltexture_feel_label"
			        android:src="@drawable/ic_menu_help"
			        android:contentDescription="@string/soil_texture_activity_feel_help_content_description"
			    />		        
				<RadioGroup
				    android:id="@+id/activity_soiltexture_radiogroup_feel"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
			        android:layout_below="@+id/activity_soiltexture_feel_label"
				>
				    <RadioButton
				        android:id="@+id/activity_soiltexture_radiobutton_feel_gritty"
				    	android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				    	android:text="@string/soil_texture_activity_gritty"
				    	android:onClick="onFeelRadioButtonClicked"
				    />
				    <RadioButton
				        android:id="@+id/activity_soiltexture_radiobutton_feel_neither"
				    	android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				    	android:text="@string/soil_texture_activity_neither"
				    	android:onClick="onFeelRadioButtonClicked"
				    />
				    <RadioButton
				        android:id="@+id/activity_soiltexture_radiobutton_feel_smooth"
				    	android:layout_width="wrap_content"
				    	android:layout_height="wrap_content"
				    	android:text="@string/soil_texture_activity_smooth"
				    	android:onClick="onFeelRadioButtonClicked"
				    />
				</RadioGroup>
			</RelativeLayout>
			
		</LinearLayout>
	</ScrollView>
    		
	<TextView
        android:id="@+id/activity_soiltexture_texture_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_above="@+id/activity_soiltexture_texture"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/soil_texture_activity_soil_texture_label"
    />
	
	<EditText
        android:id="@+id/activity_soiltexture_texture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:editable="false"
    />
    
    <Button
        android:id="@+id/activity_soiltexture_okButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/activity_soiltexture_texture"
        android:text="@string/soil_texture_activity_use_this" 
		android:visibility="gone"
		android:onClick="onOKButtonClicked"
    />
	
</RelativeLayout>
