<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" 
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
    >
    
	    <ImageView
	        android:id="@+id/fragment_info_logo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:adjustViewBounds="true"
	        android:background="#FFFFFF"
	        android:src="@drawable/lpks_logo" />
	    <RelativeLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	    >
		    <TextView
		        android:id="@+id/fragment_info_version_tv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:text=""
		    />
	    </RelativeLayout>
	    
	    <TextView
	        android:id="@+id/fragment_info_jornada_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:text="@string/about_activity_coordinated"
	    />
	    <TextView
	        android:id="@+id/fragment_info_usaid_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="3dp"
	        android:text="@string/about_activity_funded"
	    />
	    <TextView
	        android:id="@+id/fragment_info_noisyflowers_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="3dp"
	        android:text="@string/about_activity_developed"
	    />
    </LinearLayout>
</ScrollView>        
